2007-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (png_flush_data): Don't invoke SyncBlob()
	since it does far more than force data to the output file.
	* coders/jpeg.c (TerminateDestination): Don't invoke SyncBlob()
	since it does far more than force data to the output file.
	* magick/blob.c (SyncBlob): Remove from public interface.

2007-09-12  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Allowed to read signed integer matrices.
	Fixed loop break.

2007-09-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Ensure that selected photometric
	most closely matches the user's expectation.  Remove compression
	if requested compression type is not compatible with the selected
	photometric.

2007-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c (IntegralRotateImage): Use tiles to speed up
	rotation by 90 or 270 degrees.

2007-09-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c The flop image has been eliminated in a reader.
	Code has been shrinked a little bit.

2007-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageCharacteristics): Add progress monitor support.
	* magick/color.c (IsMonochromeImage): Add progress monitor support.
	(IsGrayImage): Add progress monitor support.
	(IsOpaqueImage): Add progress monitor support.
	* coders/dpx.c (ReadDPXImage): Added progress indication.
	* coders/cineon.c (WriteCINEONImage): Added progress indication.
	* magick/command.c : Added a -monitor command option for
	'composite', 'convert', 'identify', 'mogrify', and 'montage' in
	order to enable a simple progress indicator.

2007-09-06  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Write native gray MAT data when gray image is detected.

2007-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GetExecutionPath): Add support for Apple OS-X,
	Linux, and FreeBSD.
